--- a/clans/teams/4kt-ladybugs.html
+++ b/clans/teams/4kt-ladybugs.html
@@ -10,9 +10,10 @@
         :root {
             --gold: #FFD700;
             --pink: #FF69B4;
-            --black: #0A0A0A;
-            --glass: rgba(255, 255, 255, 0.05);
-            --neon-pink: 0 0 20px rgba(255, 105, 180, 0.4);
+            --deep-pink: #C71585;
+            --black: #050505;
+            --glass: rgba(255, 255, 255, 0.03);
+            --neon-glow: 0 0 20px rgba(255, 105, 180, 0.6);
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -25,100 +26,147 @@
         }
 
         /* Animated Background */
-        #bg-canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
+        canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
+
+        /* Animations */
+        @keyframes fadeInDown { from { opacity: 0; transform: translateY(-30px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes fadeInUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes glowPink { 0% { text-shadow: 0 0 10px var(--deep-pink); } 50% { text-shadow: 0 0 25px var(--pink), 0 0 40px var(--pink); } 100% { text-shadow: 0 0 10px var(--deep-pink); } }
+        @keyframes float { 0% { transform: translateY(0px); } 50% { transform: translateY(-10px); } 100% { transform: translateY(0px); } }
 
         /* Navigation */
         .nav-bar {
-            background: rgba(0,0,0,0.9);
-            border-bottom: 2px solid var(--pink);
+            background: rgba(0,0,0,0.8);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid var(--pink);
             padding: 1rem 2rem;
             position: sticky;
             top: 0;
             z-index: 1000;
+            display: flex; justify-content: space-between; align-items: center;
+            animation: fadeInDown 0.8s ease-out;
         }
 
-        .nav-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        .nav-logo { 
+            font-family: 'Orbitron'; font-weight: 900; color: white; text-decoration: none; font-size: 1.2rem; 
+            transition: 0.3s; cursor: pointer;
         }
+        .nav-logo:hover { text-shadow: var(--neon-glow); color: var(--pink); }
 
-        .nav-logo { font-family: 'Orbitron'; font-weight: 900; color: white; text-decoration: none; font-size: 1.2rem; }
+        .back-btn {
+            font-family: 'Orbitron'; font-size: 0.8rem; color: white; text-decoration: none;
+            border: 1px solid var(--pink); padding: 8px 20px; border-radius: 20px;
+            transition: 0.3s;
+        }
+        .back-btn:hover { background: var(--pink); color: white; box-shadow: var(--neon-glow); }
 
         /* Hero Section */
-        .hero { text-align: center; padding: 6rem 1rem 4rem; }
+        .hero { text-align: center; padding: 6rem 1rem 3rem; animation: fadeInDown 1s ease-out; }
         .hero h1 { 
             font-family: 'Orbitron'; 
-            font-size: clamp(2.5rem, 10vw, 4.5rem); 
+            font-size: clamp(3rem, 10vw, 5rem); 
             color: var(--pink); 
-            text-shadow: var(--neon-pink);
+            animation: glowPink 3s infinite;
             margin-bottom: 0.5rem;
         }
-        .hero p { font-family: 'Orbitron'; color: var(--gold); letter-spacing: 4px; font-size: 0.8rem; }
-
-        /* Layout Container */
-        .container { max-width: 1000px; margin: 0 auto; padding: 0 1.5rem; }
-
-        .glass-panel {
-            background: var(--glass);
-            border: 1px solid rgba(255, 105, 180, 0.2);
-            border-radius: 20px;
-            padding: 2.5rem;
-            margin-bottom: 2rem;
-            backdrop-filter: blur(10px);
+        .hero p { 
+            font-family: 'Orbitron'; color: var(--gold); letter-spacing: 5px; font-size: 1rem; 
+            text-shadow: 0 0 10px rgba(0,0,0,0.8);
         }
 
-        h2 { font-family: 'Orbitron'; color: var(--pink); margin-bottom: 1.5rem; font-size: 1.4rem; }
+        /* Container & Titles */
+        .container { max-width: 1200px; margin: 0 auto; padding: 0 1.5rem; }
 
-        /* Roster Display */
+        .section-title {
+            text-align: center; font-family: 'Orbitron'; color: white; margin-bottom: 3rem; margin-top: 2rem;
+            position: relative; display: inline-block; animation: fadeInUp 1.2s ease-out;
+            font-size: 1.8rem;
+        }
+        .section-title::after { content: ''; display: block; width: 100%; height: 3px; background: var(--pink); margin-top: 10px; box-shadow: var(--neon-glow); }
+
+        /* COOLER ROSTER GRID */
         .roster-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 30px;
+            perspective: 1000px;
         }
 
         .player-card {
-            background: rgba(255,255,255,0.03);
-            padding: 2rem;
+            background: rgba(255, 255, 255, 0.03);
+            padding: 3rem 2rem;
             text-align: center;
-            border-radius: 15px;
-            border: 1px solid transparent;
-            transition: 0.3s;
+            border-radius: 20px;
+            border: 1px solid rgba(255, 105, 180, 0.2);
+            transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            position: relative;
+            overflow: hidden;
+            animation: fadeInUp 0.8s ease-out backwards;
+            backdrop-filter: blur(10px);
         }
 
-        .player-card:hover { border-color: var(--pink); transform: translateY(-5px); }
+        /* Stagger Animation */
+        .player-card:nth-child(1) { animation-delay: 0.1s; }
+        .player-card:nth-child(2) { animation-delay: 0.2s; }
+        .player-card:nth-child(3) { animation-delay: 0.3s; }
 
-        .player-icon { font-size: 2.5rem; color: var(--pink); margin-bottom: 1rem; }
+        .player-card:hover { 
+            border-color: var(--pink); 
+            transform: translateY(-15px) scale(1.03); 
+            box-shadow: 0 0 35px rgba(255, 105, 180, 0.3);
+            background: rgba(255, 105, 180, 0.05);
+        }
 
-        /* Achievement Section */
-        .award { border-left: 3px solid var(--gold); padding-left: 20px; margin-bottom: 1.5rem; }
-        .award h3 { font-family: 'Orbitron'; font-size: 1rem; }
-        .award p { color: #888; font-size: 0.85rem; margin-top: 5px; }
+        /* Shine Effect */
+        .player-card::before {
+            content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transition: 0.5s;
+        }
+        .player-card:hover::before { left: 100%; }
+
+        .player-icon { 
+            font-size: 3.5rem; color: var(--pink); margin-bottom: 1.5rem; 
+            filter: drop-shadow(0 0 10px var(--pink));
+            transition: 0.3s;
+        }
+        .player-card:hover .player-icon { transform: scale(1.2) rotate(10deg); color: white; }
+
+        .player-name { font-family: 'Orbitron'; font-size: 1.8rem; font-weight: 700; color: white; margin-bottom: 5px; }
+        .player-role { color: var(--gold); font-size: 0.8rem; letter-spacing: 3px; text-transform: uppercase; font-weight: bold; }
+
+        /* Achievements Section - Animated */
+        .achievements-grid {
+            display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 2rem;
+        }
+
+        .award-card {
+            background: linear-gradient(135deg, rgba(255, 105, 180, 0.05), rgba(0,0,0,0.5));
+            border: 1px solid var(--pink); border-radius: 15px; padding: 2rem;
+            display: flex; align-items: center; gap: 20px;
+            animation: fadeInUp 0.8s ease-out backwards;
+            transition: 0.3s;
+        }
+        .award-card:hover { transform: translateY(-5px); box-shadow: var(--neon-glow); background: rgba(255, 105, 180, 0.1); }
+        .award-card:nth-child(1) { animation-delay: 0.5s; }
+        .award-card:nth-child(2) { animation-delay: 0.7s; }
+
+        .award-icon { font-size: 2.5rem; color: var(--gold); animation: float 3s ease-in-out infinite; }
+        
+        .award-text h3 { font-family: 'Orbitron'; font-size: 1.1rem; color: white; margin-bottom: 5px; }
+        .award-text p { color: #ccc; font-size: 0.8rem; }
 
         /* CTA Button */
         .btn-discord {
-            display: inline-block;
-            background: var(--pink);
-            color: white;
-            padding: 1rem 2.5rem;
-            border-radius: 50px;
-            text-decoration: none;
-            font-family: 'Orbitron';
-            font-weight: 900;
-            margin-top: 1rem;
-            transition: 0.3s;
+            display: inline-block; background: var(--pink); color: white; padding: 1rem 3rem;
+            border-radius: 50px; text-decoration: none; font-family: 'Orbitron'; font-weight: 900;
+            margin-top: 3rem; transition: 0.3s; box-shadow: 0 0 15px var(--pink);
+            animation: fadeInUp 1.5s ease-out;
         }
+        .btn-discord:hover { background: white; color: var(--pink); transform: scale(1.1); box-shadow: 0 0 30px var(--pink); }
 
-        .btn-discord:hover { background: #ff1493; transform: scale(1.05); box-shadow: var(--neon-pink); }
+        footer { text-align: center; padding: 4rem 1rem; opacity: 0.6; font-size: 0.8rem; font-family: 'Orbitron'; animation: fadeInUp 2s ease-out; }
 
-        footer { text-align: center; padding: 4rem 1rem; opacity: 0.5; font-size: 0.8rem; }
-
-        @media (max-width: 600px) {
-            .hero h1 { font-size: 2.5rem; }
-            .glass-panel { padding: 1.5rem; }
-        }
     </style>
 </head>
 <body>
@@ -126,50 +174,59 @@
     <canvas id="bg-canvas"></canvas>
 
     <nav class="nav-bar">
-        <div class="nav-container">
-            <a href="../index.html" class="nav-logo"><span style="color:var(--gold)">4零丨</span> LADYBUGS</a>
-            <div style="font-family:'Orbitron'; font-size: 0.7rem; letter-spacing: 1px;">BLOOD ESPORTS</div>
-        </div>
+        <a href="#" class="nav-logo"><span style="color:var(--gold)">4零丨</span> LADYBUGS</a>
+        
+        <a href="../4kt.html" class="back-btn"><i class="fas fa-arrow-left"></i> RETURN TO 4KT</a>
     </nav>
 
     <div class="container">
         <header class="hero">
             <h1>LADYBUGS</h1>
-            <p>AFRICAN FEMALE ELITE DIVISION</p>
+            <p>FEMALE ELITE DIVISION</p>
         </header>
 
-        <section class="glass-panel">
-            <h2><i class="fas fa-heart"></i> TEAM ROSTER</h2>
-            <div class="roster-grid">
-                <div class="player-card">
-                    <div class="player-icon"><i class="fas fa-crown"></i></div>
-                    <h3 style="font-family:'Orbitron'">LEADER</h3>
-                    <p style="color:var(--pink); font-size: 0.7rem;">TEAM CAPTAIN</p>
-                </div>
-                <div class="player-card">
-                    <div class="player-icon"><i class="fas fa-crosshairs"></i></div>
-                    <h3 style="font-family:'Orbitron'">SLAYER</h3>
-                    <p style="color:var(--pink); font-size: 0.7rem;">FRONT LINE</p>
-                </div>
-                <div class="player-card">
-                    <div class="player-icon"><i class="fas fa-shield-alt"></i></div>
-                    <h3 style="font-family:'Orbitron'">ANCHOR</h3>
-                    <p style="color:var(--pink); font-size: 0.7rem;">SUPPORT</p>
-                </div>
-            </div>
-        </section>
+        <div style="text-align: center;">
+            <h2 class="section-title">ACTIVE ROSTER</h2>
+        </div>
 
-        <section class="glass-panel">
-            <h2><i class="fas fa-trophy"></i> ACHIEVEMENTS</h2>
-            <div class="award">
-                <h3>BER TIER 2 CHAMPIONS</h3>
-                <p>Blood Esports Rankings - Dominant performance in the female division.</p>
+        <div class="roster-grid">
+            <div class="player-card">
+                <div class="player-icon"><i class="fas fa-crown"></i></div>
+                <div class="player-name">LEADER</div>
+                <div class="player-role">TEAM CAPTAIN</div>
             </div>
-            <div class="award">
-                <h3>2X OGR RANKED</h3>
-                <p>Onward Female Gaming Rankings - Consistently top-tier in Africa.</p>
+            <div class="player-card">
+                <div class="player-icon"><i class="fas fa-crosshairs"></i></div>
+                <div class="player-name">SLAYER</div>
+                <div class="player-role">FRONT LINE</div>
             </div>
-        </section>
+            <div class="player-card">
+                <div class="player-icon"><i class="fas fa-shield-alt"></i></div>
+                <div class="player-name">ANCHOR</div>
+                <div class="player-role">SUPPORT</div>
+            </div>
+            </div>
+
+        <div style="text-align: center; margin-top: 3rem;">
+            <h2 class="section-title">ACHIEVEMENTS</h2>
+        </div>
+
+        <div class="achievements-grid">
+            <div class="award-card">
+                <i class="fas fa-trophy award-icon"></i>
+                <div class="award-text">
+                    <h3>BER TIER 2 CHAMPIONS</h3>
+                    <p>Blood Esports Rankings - Dominant performance.</p>
+                </div>
+            </div>
+            <div class="award-card">
+                <i class="fas fa-medal award-icon" style="animation-delay: 0.5s;"></i>
+                <div class="award-text">
+                    <h3>2X OGR RANKED</h3>
+                    <p>Onward Female Gaming Rankings - Top Tier.</p>
+                </div>
+            </div>
+        </div>
 
         <div style="text-align: center;">
             <a href="https://discord.gg/99uuMvMBX" class="btn-discord">JOIN THE SQUAD</a>
@@ -189,23 +246,24 @@
         canvas.height = window.innerHeight;
 
         const butterflies = [];
-        const colors = ['#FF69B4', '#FFD700']; // Pink and Gold
+        const colors = ['#FF69B4', '#FFD700', '#FFFFFF']; // Pink, Gold, White
 
         class Butterfly {
             constructor() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height - canvas.height;
-                this.size = Math.random() * 15 + 10;
-                this.speedY = Math.random() * 2 + 1;
+                this.size = Math.random() * 12 + 8;
+                this.speedY = Math.random() * 1.5 + 0.5;
                 this.speedX = Math.random() * 2 - 1;
                 this.color = colors[Math.floor(Math.random() * colors.length)];
                 this.angle = Math.random() * 360;
                 this.spin = Math.random() * 2 - 1;
+                this.opacity = Math.random() * 0.5 + 0.3;
             }
 
             update() {
                 this.y += this.speedY;
-                this.x += this.speedX + Math.sin(this.y / 50); // Add some sway
+                this.x += this.speedX + Math.sin(this.y / 50); // Sway effect
                 this.angle += this.spin;
 
                 if (this.y > canvas.height + this.size) {
@@ -218,6 +276,7 @@
                 ctx.save();
                 ctx.translate(this.x, this.y);
                 ctx.rotate(this.angle * Math.PI / 180);
+                ctx.globalAlpha = this.opacity;
                 ctx.fillStyle = this.color;
                 ctx.font = `${this.size}px Arial`;
                 ctx.fillText('🦋', 0 - this.size/2, 0 + this.size/2);
@@ -226,7 +285,7 @@
         }
 
         function init() {
-            for (let i = 0; i < 50; i++) {
+            for (let i = 0; i < 40; i++) {
                 butterflies.push(new Butterfly());
             }
         }
