--- a/terms.html
+++ b/terms.html
@@ -5,60 +5,217 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TERMS OF SERVICE | BLOOD ESPORTS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        :root { --gold: #FFD700; --red: #FF0000; --black: #000000; }
+        :root {
+            --gold: #FFD700;
+            --red: #FF0000;
+            --black: #050505;
+            --gray: #1a1a1a;
+            --text: #e0e0e0;
+        }
+
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { background-color: var(--black); color: white; font-family: 'Montserrat', sans-serif; line-height: 1.6; overflow-x: hidden; }
+
+        body {
+            background-color: var(--black);
+            color: var(--text);
+            font-family: 'Montserrat', sans-serif;
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
+
+        /* PARTICLES */
         #particle-canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
-        .luxury-nav { background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--gold); padding: 1rem 2rem; position: sticky; top: 0; z-index: 1000; }
-        .nav-container { max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; }
-        .nav-title { font-family: 'Orbitron'; font-weight: 900; font-size: 1.1rem; color: var(--gold); }
-        .content-box { max-width: 900px; margin: 4rem auto; padding: 3rem; background: rgba(15,15,15,0.8); border: 1px solid var(--gold); border-radius: 20px; backdrop-filter: blur(10px); }
-        h1, h2 { font-family: 'Orbitron'; color: var(--gold); margin-bottom: 1.5rem; text-transform: uppercase; }
-        p { margin-bottom: 1.5rem; color: #ccc; }
-        .footer { text-align: center; padding: 3rem; border-top: 1px solid #222; font-family: 'Orbitron'; font-size: 0.75rem; color: #555; }
+
+        /* NAVIGATION */
+        .luxury-nav { 
+            background: rgba(0,0,0,0.95); 
+            border-bottom: 2px solid var(--gold); 
+            padding: 1rem 2rem; 
+            position: sticky; top: 0; z-index: 1000; 
+            display: flex; justify-content: space-between; align-items: center;
+        }
+        .nav-brand { font-family: 'Orbitron'; font-weight: 900; font-size: 1.2rem; color: white; text-decoration: none; }
+        .nav-brand span { color: var(--gold); }
+        .nav-link { color: white; text-decoration: none; font-family: 'Orbitron'; font-size: 0.8rem; border: 1px solid var(--gold); padding: 8px 20px; transition: 0.3s; }
+        .nav-link:hover { background: var(--gold); color: black; }
+
+        /* HEADER */
+        .policy-header {
+            padding: 4rem 1.5rem;
+            text-align: center;
+            border-bottom: 1px solid rgba(255, 215, 0, 0.2);
+            background: linear-gradient(180deg, rgba(20,0,0,0.8), transparent);
+        }
+
+        .policy-title {
+            font-family: 'Orbitron';
+            font-size: clamp(2rem, 5vw, 3.5rem);
+            color: var(--gold);
+            text-transform: uppercase;
+            margin-bottom: 10px;
+            text-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
+        }
+
+        .last-updated {
+            color: #888;
+            font-family: 'Orbitron';
+            font-size: 0.9rem;
+            letter-spacing: 2px;
+        }
+
+        /* CONTAINER */
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 3rem 1.5rem;
+        }
+
+        /* SECTIONS */
+        .policy-section {
+            margin-bottom: 2rem;
+            padding: 2.5rem;
+            background: rgba(20, 20, 20, 0.8);
+            border-radius: 10px;
+            border-left: 4px solid var(--gold);
+            backdrop-filter: blur(10px);
+            transition: 0.3s;
+        }
+        .policy-section:hover {
+            box-shadow: 0 0 30px rgba(255, 215, 0, 0.1);
+            transform: translateX(5px);
+        }
+
+        h2 {
+            font-family: 'Orbitron';
+            color: white;
+            margin-bottom: 1.5rem;
+            font-size: 1.5rem;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+            padding-bottom: 10px;
+        }
+
+        h2 i { color: var(--gold); }
+
+        p { margin-bottom: 1rem; color: #ccc; font-size: 1.05rem; }
+
+        /* LINKS */
+        a { color: var(--gold); text-decoration: none; transition: 0.3s; font-weight: bold; }
+        a:hover { color: var(--red); text-shadow: 0 0 10px var(--red); }
+
+        /* FOOTER */
+        .footer {
+            text-align: center;
+            padding: 3rem;
+            border-top: 1px solid #333;
+            font-size: 0.8rem;
+            color: #666;
+            font-family: 'Orbitron';
+            margin-top: 3rem;
+        }
     </style>
 </head>
 <body>
+
     <canvas id="particle-canvas"></canvas>
+
     <nav class="luxury-nav">
-        <div class="nav-container">
-            <div class="nav-title">BLOOD ESPORTS</div>
-            <a href="index.html" style="color:white; text-decoration:none; font-family:'Orbitron'; font-size:0.8rem;">BACK TO HOME</a>
-        </div>
+        <a href="index.html" class="nav-brand">BLOOD <span>ESPORTS</span></a>
+        <a href="index.html" class="nav-link"><i class="fas fa-home"></i> HOME</a>
     </nav>
-    <div class="content-box">
-        <h1>Terms of Service</h1>
-        <p>Last Updated: January 2026</p>
-        <h2>1. Acceptance of Terms</h2>
-        <p>By accessing the Blood Esports website, you agree to comply with these terms. You are responsible for following all applicable laws and regulations regarding competitive gaming and community conduct.</p>
-        <h2>2. Community Conduct</h2>
-        <p>All members and visitors must maintain a professional and respectful attitude. Harassment, cheating, or toxic behavior within our Discord or competitive rosters is strictly prohibited and may lead to immediate removal.</p>
-        <h2>3. Intellectual Property</h2>
-        <p>The Blood Esports logo and branding are the property of the organization. Unauthorized use of our assets for commercial purposes is prohibited without explicit consent from Choco or Danny.</p>
+
+    <header class="policy-header">
+        <h1 class="policy-title">TERMS OF SERVICE</h1>
+        <div class="last-updated">LAST UPDATED: JANUARY 2026</div>
+    </header>
+
+    <div class="container">
+        
+        <div class="policy-section">
+            <h2><i class="fas fa-handshake"></i> 1. ACCEPTANCE OF TERMS</h2>
+            <p>By accessing the Blood Esports website, joining our Discord, or participating in our tournaments, you agree to comply with these terms. You are responsible for following all applicable laws and regulations regarding competitive gaming and community conduct.</p>
+        </div>
+
+        <div class="policy-section">
+            <h2><i class="fas fa-gavel"></i> 2. COMMUNITY CONDUCT</h2>
+            <p>We maintain a high standard of integrity. All members and visitors must maintain a professional and respectful attitude. We have a <strong>zero-tolerance policy</strong> for the following:</p>
+            <ul>
+                <li>Harassment, hate speech, or toxic behavior.</li>
+                <li>Cheating, hacking, or using exploits in competitive play.</li>
+                <li>Disrespecting staff, opponents, or teammates.</li>
+            </ul>
+            <p>Violation of these rules may lead to immediate removal from the roster, ban from our Discord, and disqualification from events.</p>
+        </div>
+
+        <div class="policy-section">
+            <h2><i class="fas fa-gem"></i> 3. INTELLECTUAL PROPERTY</h2>
+            <p>The <strong>Blood Esports logo, "4零丨" tag, and branding materials</strong> are the exclusive property of the organization.</p>
+            <p>Unauthorized use, reproduction, or distribution of our assets for commercial purposes is strictly prohibited without explicit written consent from <strong>Choco</strong> or <strong>Danny</strong>.</p>
+        </div>
+
+        <div class="policy-section">
+            <h2><i class="fas fa-ban"></i> 4. TERMINATION</h2>
+            <p>Blood Esports reserves the right to terminate your access to our services, Discord server, or competitive roster at any time, without notice, for conduct that we believe violates these Terms of Service or is harmful to other users of the community.</p>
+        </div>
+
+        <div class="policy-section" style="border-left-color: var(--red);">
+            <h2><i class="fas fa-envelope"></i> 5. CONTACT</h2>
+            <p>If you have questions regarding these terms or need to request permission for asset use, please contact us:</p>
+            <p style="font-size: 1.2rem;">
+                <i class="fas fa-paper-plane" style="color:var(--red); margin-right:10px;"></i> 
+                <a href="mailto:bloodesports00@gmail.com">bloodesports00@gmail.com</a>
+            </p>
+        </div>
+
     </div>
-    <footer class="footer">ALL RIGHTS RESERVED BLOOD ESPORTS 2026</footer>
+
+    <footer class="footer">
+        <p>&copy; 2026 BLOOD ESPORTS. ALL RIGHTS RESERVED.</p>
+    </footer>
+
     <script>
+        // BACKGROUND ANIMATION
         const canvas = document.getElementById('particle-canvas');
         const ctx = canvas.getContext('2d');
         let particles = [];
+
         function init() {
-            canvas.width = window.innerWidth; canvas.height = window.innerHeight;
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
             particles = [];
-            for (let i = 0; i < 100; i++) {
-                particles.push({ x: Math.random() * canvas.width, y: Math.random() * canvas.height, size: Math.random() * 2, speed: Math.random() * 0.5 + 0.2 });
+            for (let i = 0; i < 80; i++) {
+                particles.push({ 
+                    x: Math.random() * canvas.width, 
+                    y: Math.random() * canvas.height, 
+                    size: Math.random() * 2, 
+                    speed: Math.random() * 0.5 + 0.2 
+                });
             }
         }
+
         function animate() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height); ctx.fillStyle = '#FFD700';
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = '#FFD700'; // Gold Particles
             particles.forEach(p => {
-                ctx.beginPath(); ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2); ctx.fill();
-                p.y -= p.speed; if (p.y < 0) p.y = canvas.height;
+                ctx.beginPath();
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+                ctx.fill();
+                p.y -= p.speed;
+                if (p.y < 0) {
+                    p.y = canvas.height;
+                    p.x = Math.random() * canvas.width;
+                }
             });
             requestAnimationFrame(animate);
         }
-        window.addEventListener('resize', init); init(); animate();
+
+        window.addEventListener('resize', init);
+        init();
+        animate();
     </script>
 </body>
 </html>
